--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <div class="home-content">
                 <div class="text-1">Hello, my name is</div>
                 <div class="text-2">BLYAT TUKAN</div>
-                <div class="text-3">I DEVELOPED A <span class="typing"></span></div>
+                <div class="text-3"><span class="typing"></span></div>
                 <a href="#">Download Launcher</a>
             </div>
         </div>
@@ -71,15 +71,36 @@
             <div class="serv-content">
                 <div class="card">
                     <div class="box">
-                        <i class="fas fa-paint-brush"></i>
-                        <div class="text">Web Design</div>
+                        <i class="fas fa-code"></i>
+                        <div class="text">Apps Design</div>
                         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rem quia sunt, quasi quo illo enim.</p>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
-                        <i class="fas fa-chart-line"></i>
-                        <div class="text">Advertising</div>
+                        <i class="fas fa-code"></i>
+                        <div class="text">Apps Design</div>
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rem quia sunt, quasi quo illo enim.</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="box">
+                        <i class="fas fa-code"></i>
+                        <div class="text">Apps Design</div>
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rem quia sunt, quasi quo illo enim.</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="box">
+                        <i class="fas fa-code"></i>
+                        <div class="text">Apps Design</div>
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rem quia sunt, quasi quo illo enim.</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="box">
+                        <i class="fas fa-code"></i>
+                        <div class="text">Apps Design</div>
                         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rem quia sunt, quasi quo illo enim.</p>
                     </div>
                 </div>
@@ -155,6 +176,7 @@
                     <div class="box">
                         <img src="images/profile-1.jpeg" alt="">
                         <div class="text">SYNTY STUDIO</div>
+                        <div class="text-title">GRAPHIC</div>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                     </div>
                 </div>
@@ -162,6 +184,7 @@
                     <div class="box">
                         <img src="images/profile-2.jpeg" alt="">
                         <div class="text">Someone name</div>
+                        <div class="text-title">GRAPHIC</div>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                     </div>
                 </div>
@@ -169,6 +192,7 @@
                     <div class="box">
                         <img src="images/profile-3.jpeg" alt="">
                         <div class="text">Someone name</div>
+                        <div class="text-title">GRAPHIC</div>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                     </div>
                 </div>
@@ -176,6 +200,7 @@
                     <div class="box">
                         <img src="images/profile-4.jpeg" alt="">
                         <div class="text">Someone name</div>
+                        <div class="text-title">GRAPHIC</div>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                     </div>
                 </div>
@@ -183,6 +208,7 @@
                     <div class="box">
                         <img src="images/profile-5.jpeg" alt="">
                         <div class="text">Someone name</div>
+                        <div class="text-title">GRAPHIC</div>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                     </div>
                 </div>
@@ -203,21 +229,21 @@
                             <i class="fas fa-user"></i>
                             <div class="info">
                                 <div class="head">Name</div>
-                                <div class="sub-title">Prakash Shahi</div>
+                                <div class="sub-title">/// UNKNOWN ///</div>
                             </div>
                         </div>
                         <div class="row">
                             <i class="fas fa-map-marker-alt"></i>
                             <div class="info">
                                 <div class="head">Address</div>
-                                <div class="sub-title">Surkhet, Nepal</div>
+                                <div class="sub-title">/// UNKNOWN ///</div>
                             </div>
                         </div>
                         <div class="row">
                             <i class="fas fa-envelope"></i>
                             <div class="info">
                                 <div class="head">Email</div>
-                                <div class="sub-title">abc@gmail.com</div>
+                                <div class="sub-title">/// UNKNOWN ///</div>
                             </div>
                         </div>
                     </div>
