--- a/index.html
+++ b/index.html
@@ -67,48 +67,42 @@
     <!-- services section start -->
     <section class="services" id="services">
         <div class="max-width">
-            <h2 class="title">My services</h2>
+            <h2 class="title">My Skills</h2>
             <div class="serv-content">
                 <div class="card">
                     <div class="box">
+                        <i class="fas fa-file-code"></i>
+                        <div class="text">HTML5 & CSS3</div>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="box">
                         <i class="fas fa-code"></i>
-                        <div class="text">Apps Design</div>
-                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rem quia sunt, quasi quo illo enim.</p>
+                        <div class="text">C#</div>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="box">
+                        <i class="fas fa-code"></i>
+                        <div class="text">Develop</div>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
                         <i class="fas fa-code"></i>
                         <div class="text">Apps Design</div>
-                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rem quia sunt, quasi quo illo enim.</p>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
                         <i class="fas fa-code"></i>
                         <div class="text">Apps Design</div>
-                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rem quia sunt, quasi quo illo enim.</p>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
                         <i class="fas fa-code"></i>
                         <div class="text">Apps Design</div>
-                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rem quia sunt, quasi quo illo enim.</p>
-                    </div>
-                </div>
-                <div class="card">
-                    <div class="box">
-                        <i class="fas fa-code"></i>
-                        <div class="text">Apps Design</div>
-                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rem quia sunt, quasi quo illo enim.</p>
-                    </div>
-                </div>
-                <div class="card">
-                    <div class="box">
-                        <i class="fas fa-code"></i>
-                        <div class="text">Apps Design</div>
-                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rem quia sunt, quasi quo illo enim.</p>
                     </div>
                 </div>
                </div>
@@ -211,6 +205,57 @@
                         <div class="text-title">GRAPHIC</div>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                     </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- portfolio section start -->
+	<section class="portfolio" id="portfolio">
+        <div class="max-width">
+            <h2 class="title">Portfolio</h2>    
+            <div class="portfolio-content">
+                <div class="portfolio-box">
+                    <div class="overlay-text">
+                        <h1>Writting</h1>
+                        <p>Client Project</p>	
+                    </div>
+                    <img src="images/profile-2.jpeg">           
+                </div>
+                <div class="portfolio-box">
+                    <div class="overlay-text">
+                        <h1>Writting</h1>
+                        <p>Client Project</p>	
+                    </div>
+                    <img src="images/profile-2.jpeg">           
+                </div>
+                <div class="portfolio-box">
+                    <div class="overlay-text">
+                        <h1>Writting</h1>
+                        <p>Client Project</p>	
+                    </div>
+                    <img src="images/profile-2.jpeg">           
+                </div>
+                <div class="portfolio-box">
+                    <div class="overlay-text">
+                        <h1>Writting</h1>
+                        <p>Client Project</p>	
+                    </div>
+                    <img src="images/profile-2.jpeg">           
+                </div>
+                <div class="portfolio-box">
+                    <div class="overlay-text">
+                        <h1>Writting</h1>
+                        <p>Client Project</p>	
+                    </div>
+                    <img src="images/profile-2.jpeg">           
+                </div>
+                <div class="portfolio-box">
+                    <div class="overlay-text">
+                        <h1>Writting</h1>
+                        <p>Client Project</p>	
+                    </div>
+                    <img src="images/profile-2.jpeg">           
                 </div>
             </div>
         </div>
