--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Blyat Tukan</title>
+    <title>Tiny Slime Studio</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
@@ -20,13 +20,15 @@
     </div>
     <nav class="navbar">
         <div class="max-width">
-            <div class="logo"><a href="#">BLYAT<span> TUKAN</span></a></div>
+            <div class="logo"><a href="#">TINY SLIME<span> STUDIO</span></a></div>
             <ul class="menu">
                 <li><a href="#home" class="menu-btn">Home</a></li>
                 <li><a href="#about" class="menu-btn">About</a></li>
                 <li><a href="#services" class="menu-btn">Services</a></li>
                 <li><a href="#skills" class="menu-btn">Skills</a></li>
                 <li><a href="#teams" class="menu-btn">Teams</a></li>
+                <li><a href="#portfolio" class="menu-btn">Portfolio</a></li>
+                <li><a href="#social" class="menu-btn">Socials</a></li>
                 <li><a href="#contact" class="menu-btn">Contact</a></li>
             </ul>
             <div class="menu-btn">
@@ -40,7 +42,7 @@
         <div class="max-width">
             <div class="home-content">
                 <div class="text-1">Hello, my name is</div>
-                <div class="text-2">BLYAT TUKAN</div>
+                <div class="text-2">TINY SLIME STUDIO</div>
                 <div class="text-3"><span class="typing"></span></div>
                 <a href="#">Download Launcher</a>
             </div>
@@ -50,7 +52,7 @@
     <!-- about section start -->
     <section class="about" id="about">
         <div class="max-width">
-            <h2 class="title">Title Bro</h2>
+            <h2 class="title">About Me</h2>
             <div class="about-content">
                 <div class="column left">
                     <img src="images/profile-1.jpeg" alt="">
@@ -216,26 +218,73 @@
             <h2 class="title">Portfolio</h2>    
             <div class="portfolio-content">
                 <div class="portfolio-box">
-                    <img src="images/profile-1.jpeg">          
+                    <a href="not-found-page.index"><img src="images/profile-1.jpeg"></img></a>     
                 </div>
                 <div class="portfolio-box">
-                    <img src="images/profile-2.jpeg">          
+                    <a href="not-found-page.index"><img src="images/profile-2.jpeg"></img></a>           
                 </div>
                 <div class="portfolio-box">
-                    <img src="images/profile-3.jpeg">          
+                    <a href="not-found-page.index"><img src="images/profile-3.jpeg"></img></a>            
                 </div>
                 <div class="portfolio-box">
-                    <img src="images/profile-4.jpeg">          
+                    <a href="not-found-page.index"><img src="images/profile-4.jpeg"></img></a>           
                 </div>
                 <div class="portfolio-box">
-                    <img src="images/profile-5.jpeg">          
+                    <a href="not-found-page.index"><img src="images/profile-5.jpeg"></img></a>           
                 </div>
                 <div class="portfolio-box">
-                    <img src="images/banner.jpg">          
+                    <a href="not-found-page.index"><img src="images/banner.jpg"></img></a>             
                 </div>
             </div>
         </div>
     </section>
+    <!-- Social section start -->
+
+    <section class="social" id="social">
+        <div class="max-width">
+            <h2 class="title">Social</h2>
+            <div class="cards-content">
+                <div class="card youtube">
+                    <h3 class="card-title-large">YouTube</h3>
+                    <h5 class="card-title-small">Youtube</h5>
+                    <p class="card-description">Lorem Ipsum dolor amen</p>
+                    <a href="#" class="card-cta">&rarr;</a>
+                </div>
+                <div class="card twitter">
+                    <h3 class="card-title-large">Twitter</h3>
+                    <h5 class="card-title-small">Twitter</h5>
+                    <p class="card-description">Lorem Ipsum dolor amen</p>
+                    <a href="#" class="card-cta">&rarr;</a>
+                </div>
+                <div class="card facebook">
+                    <h3 class="card-title-large">Facebook</h3>
+                    <h5 class="card-title-small">Facebook</h5>
+                    <p class="card-description">Lorem Ipsum dolor amen</p>
+                    <a href="#" class="card-cta">&rarr;</a>
+                </div>
+                <div class="card discord">
+                    <h3 class="card-title-large">Discord</h3>
+                    <h5 class="card-title-small">Discord</h5>
+                    <p class="card-description">Lorem Ipsum dolor amen</p>
+                    <a href="#" class="card-cta">&rarr;</a>
+                </div>
+                <div class="card steam">
+                    <h3 class="card-title-large">Steam</h3>
+                    <h5 class="card-title-small">Steam</h5>
+                    <p class="card-description">Lorem Ipsum dolor amen</p>
+                    <a href="#" class="card-cta">&rarr;</a>
+                </div>
+                <div class="card telegram">
+                    <h3 class="card-title-large">Telegram</h3>
+                    <h5 class="card-title-small">Telegram</h5>
+                    <p class="card-description">Lorem Ipsum dolor amen</p>
+                    <a href="#" class="card-cta">&rarr;</a>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    
 
     <!-- contact section start -->
     <section class="contact" id="contact">
@@ -297,7 +346,7 @@
 
     <!-- footer section start -->
     <footer>
-        <span>Created By <a href="https://www.codingnepalweb.com">CodingNepal</a> | <span class="far fa-copyright"></span> 2020 All rights reserved.</span>
+        <span>Created By <a href="https://www.codingnepalweb.com">Tiny Slime Studio</a> | <span class="far fa-copyright"></span> 2021 All rights reserved.</span>
     </footer>
 
     <script src="script.js"></script>
