--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tiny Slime Studio</title>
+    <title>Tiny Slime Studio | Home</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
@@ -271,8 +271,8 @@
         <div class="shadow"></div>
         </div>
     </section>
-    <!-- Social section start -->
 
+    <!-- Social section start -->
     <section class="social" id="social">
         <div class="max-width">
             <h2 class="title">Social</h2>
@@ -315,9 +315,7 @@
                 </div>
             </div>
         </div>
-    </section>
-
-    
+    </section> 
 
     <!-- contact section start -->
     <section class="contact" id="contact">
